# GA-aided-NMPC-tuning

./: .dockerignore  .flake8  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  requirements.txt  setup.bash
benchmark/: CMakeLists.txt  bm_nmpc_loop.cpp  bm_solver.py
cmake/: ExternalProjects.cmake
config/: config-ga.yaml  config-mono.yaml
include/: pcheaders.h
include/genetic_algorithm/: core.h  fitness.h  operators.h  organism.h  population.h
include/model/: base_organism.h  differential_drive.h
include/mpc_lib/: mpc.h
include/utils/: config_handler.hpp  json_logger.hpp  progress_bar.hpp
log/: best-of-generation-1.json  best-of-generation-10.json  best-of-generation-100.json  best-of-generation-11.json  best-of-generation-12.json  best-of-generation-13.json  best-of-generation-14.json  best-of-generation-15.json  best-of-generation-16.json  best-of-generation-17.json  best-of-generation-2.json  best-of-generation-20.json  best-of-generation-21.json  best-of-generation-23.json  best-of-generation-25.json  best-of-generation-27.json  best-of-generation-3.json  best-of-generation-30.json  best-of-generation-31.json  best-of-generation-33.json  best-of-generation-34.json  best-of-generation-37.json  best-of-generation-38.json  best-of-generation-4.json  best-of-generation-46.json  best-of-generation-47.json  best-of-generation-49.json  best-of-generation-5.json  best-of-generation-51.json  best-of-generation-54.json  best-of-generation-57.json  best-of-generation-6.json  best-of-generation-61.json  best-of-generation-62.json  best-of-generation-65.json  best-of-generation-68.json  best-of-generation-7.json  best-of-generation-70.json  best-of-generation-75.json  best-of-generation-78.json  (+9 more)
scripts/: entrypoint.sh  install_ipopt.sh  plot.py
scripts/bash/: entrypoint.sh
scripts/python/: plot.py
src/: hone_weights.cpp  mpc.cpp  mpc.h  mpc_mono.cpp  wrapper.cpp
src/genetic_algorithm/: core.cpp  fitness.cpp  operators.cpp  organism.cpp  population.cpp
src/model/: base_organism.cpp  differential_drive.cpp
src/mpc_lib/: mpc.cpp
tests/: CMakeLists.txt  _helpers.py  test_ga_op.cpp  test_lib.py  test_model.cpp  test_mono.cpp
workspace/: CMakeLists.txt  plot.py
workspace/config/: config-ga.yaml
workspace/include/: primary.h
workspace/include/genetic_algorithm/: core.h  fitness.h  operators.h  population.h
workspace/include/model/: differential_drive.h
workspace/include/utils/: config_handler.hpp
workspace/src/: mpc_mono.cpp
workspace/src/genetic_algorithm/: core.cpp  operators.cpp  organism.cpp  population.cpp
workspace/src/model/: base_organism.cpp
workspace/src/mpc_lib/: mpc.cpp
workspace/tests/: CMakeLists.txt  test_ga_core.cpp  test_model.cpp
